# simple-reason

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  config.h.in
docs/: ack_red.tex
headers/: atomic.hpp  clause.hpp  cnf.hpp  conjunction.hpp  constant.hpp  definitions.hpp  formula.hpp  true_constant.hpp
include/: atomic.hpp  binary_formula.hpp  conjunction.hpp  disjunction.hpp  disjunction_distribution.hpp  elimination.hpp  equivalence.hpp  formulae.hpp  implication.hpp  letter.hpp  negation.hpp  negation_distribuition.hpp  sat.hpp  simplification.hpp  transformation.hpp  unary_formula.hpp
include/formulae/: atomic.hpp  atomic.hpp.autosave  binary_formula.hpp  clause.hpp  cnf.hpp  conjunction.hpp  constant.hpp  disjunction.hpp  equals.hpp  equivalence.hpp  exists.hpp  false_constant.hpp  for_all.hpp  formula.hpp  formulae.hpp  function.hpp  implication.hpp  letter.hpp  logic_constant.hpp  negation.hpp  not_equals.hpp  predicate.hpp  quantifier.hpp  term.hpp  true_constant.hpp  unary_formula.hpp  var.hpp
include/semantics/: valuation.hpp
include/transformations/: ackermann_reduction.hpp  ackermann_step.hpp  composite_transformation.hpp  conjunction_distribution.hpp  disjunction_distribution.hpp  elimination.hpp  equivalence_elimination.hpp  naive_cnf.hpp  negation_distribuition.hpp  nnf.hpp  prenex.hpp  quantifier_extraction.hpp  rename.hpp  simplification.hpp  transformation.hpp  transformations.hpp
parser/: lexer.l  parser.ypp
sources/: binary_formula.cpp  clause.cpp  cnf.cpp  conjunction.cpp  disjunction.cpp  equivalence.cpp  false_constant.cpp  formula.cpp  letter.cpp  unary_formula.cpp  valuation.cpp
src/: atomic.cpp  binary_formula.cpp  composite_transformation.cpp  conjunction.cpp  conjunction_distribution.cpp  disjunction.cpp  elimination.cpp  equivalence.cpp  formula.cpp  implication.cpp  main.cpp  naive_cnf.cpp  negation.cpp  nnf.cpp  sat.cpp  simplification.cpp  true_constant.cpp  unary_formula.cpp
src/formulae/: atomic.cpp  binary_formula.cpp  clause.cpp  cnf.cpp  conjunction.cpp  constant.cpp  disjunction.cpp  equals.cpp  equivalence.cpp  exists.cpp  false_constant.cpp  for_all.cpp  formula.cpp  function.cpp  implication.cpp  letter.cpp  logic_constant.cpp  negation.cpp  not_equals.cpp  predicate.cpp  quantifier.cpp  term.cpp  true_constant.cpp  unary_formula.cpp  var.cpp
src/semantics/: valuation.cpp
src/transformations/: ackermann_reduction.cpp  ackermann_step.cpp  composite_transformation.cpp  conjunction_distribution.cpp  disjunction_distribution.cpp  elimination.cpp  equivalence_elimination.cpp  naive_cnf.cpp  negation_distribuition.cpp  nnf.cpp  prenex.cpp  quantifier_extraction.cpp  rename.cpp  simplification.cpp  simplification.cpp.autosave  transformation.cpp
tests/: err1.fml  test1.fml  test2.fml  test3.fml  test4.fml  test5.fml  test6.fml  test7.fml
